feat(server): リクエスト・レスポンスにUUIDを使うように変更
