# server/src/main/kotlin/dev/s7a/w3/server/model/UserRequest.kt
@@ -1,15 +1,17 @@
 package dev.s7a.w3.server.model
 
 import dev.s7a.w3.server.database.entity.Desk
+import dev.s7a.w3.server.util.UUIDSerializer
 import kotlinx.serialization.SerialName
 import kotlinx.serialization.Serializable
+import java.util.UUID
 
 /**
- * @param deskId 受付ID
+ * @param deskUuid 受付ID
  */
 @Serializable
 data class UserRequest(
-    @SerialName("desk_id") val deskId: Int,
+    @SerialName("desk_uuid") @Serializable(with = UUIDSerializer::class) val deskUuid: UUID,
 ) {
-    constructor(desk: Desk) : this(desk.id.value)
+    constructor(desk: Desk) : this(desk.uuid)
 }
